syntax = "proto3";

package Kommander.WAL.Protos;

message RaftLogMessage {
  int32 partition = 1;
  int64 id = 2;
  int64 term = 3;
  int32 type = 4;
  optional string logType = 5;
  optional bytes log = 6;
  int32 timeNode = 7;
  int64 timePhysical = 8;
  uint32 timeCounter = 9;
}